--- a/app/views/spree/wishlists/_mail_to_friend.text.erb
+++ b/app/views/spree/wishlists/_mail_to_friend.text.erb
@@ -1,14 +1,14 @@
-<%= mail.recipient_name %>,
+<%= @mail.recipient_name %>,
 
 <%= Spree.t(:take_a_look_at_my_wishlist) %>
 
-  * <%= wishlist.name %>
+  * <%= @object.name %>
 
-<% unless mail.message.blank? -%>
-<%= mail.message %>
+<% unless @mail.message.blank? -%>
+<%= @mail.message %>
 <% end -%>
 
-<%= mail.sender_name %>
+<%= @mail.sender_name %>
 
-<%= Spree.t(:click_link_to_view_wishlist, name: wishlist.name) %>
-<%= wishlist_url(wishlist) %>
+<%= Spree.t(:click_link_to_view_wishlist, name: @object.name) %>
+<%= wishlist_url(@object) %>
